# ticket_retrieval_system

./: .gitignore  README.md  app.py  main.py  pyproject.toml
data/: Customer Service_tickets.json  Product Support_tickets.json  Product Support_tickets.xml  Technical Support_tickets.json  Technical Support_tickets.xml
src/: document_loader.py  rag_chain.py  vector_store.py
src/engine/: __init__.py
